--- a/src/scss/blocks/_name.scss
+++ b/src/scss/blocks/_name.scss
@@ -11,12 +11,16 @@
 	@media (max-width: 992px) {
 		background-image: none;
 	}
+	@media (max-width: 768px) {
+		padding-top: 0;
+	}
 	@media (max-width: 576px) {
 		padding-bottom: 60px;
 	}
 }
 
 .name__wrapper {
+	position: relative;
 	display: flex;
 	align-items: center;
 	@media (max-width: 768px) {
@@ -47,6 +51,8 @@
 }
 
 .name__list {
+	position: relative;
+	z-index: 30;
 	li {
 		padding-left: 20px;
 		margin-bottom: 15px;
@@ -77,6 +83,8 @@
 	}
 }
 .name__photo {
+	position: relative;
+	z-index: 10;
 	@media (max-width: 768px) {
 		overflow: hidden;
 		position: relative;
@@ -138,8 +146,12 @@
 		&:first-child {
 			margin-right: 20px;
 		}
+		&:hover {
+			opacity: 0.8;
+		}
 		@media (max-width: 576px) {
 			font-size: 16px;
+			padding: 2px 20px;
 		}
 	}
 }
@@ -150,15 +162,16 @@
 	height: 1656px;
 	top: -990px;
 	left: -500px;
-	z-index: 1;
+	z-index: 20;
 	.circle-1 {
 		background-image: url("../images/name-circle.svg");
 		background-repeat: no-repeat;
 		position: relative;
 		width: 100%;
 		height: 100%;
+		top: 10px;
 	}
-	@media(max-width: 992px) {
+	@media (max-width: 992px) {
 		display: none;
 	}
 }
