--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -59,7 +59,7 @@ block vars
 			twitterTitle: title,
 			twitterDescription: description,
 			twitterImage: image,
-			viewport: 'width=device-width, initial-scale=1',
+			viewport: 'width=device-width, initial-scale=1, maximum-scale=1.0',
 			XUACompatible: 'IE=edge'
 		}
 	-
