--- a/src/scss/blocks/_activities.scss
+++ b/src/scss/blocks/_activities.scss
@@ -53,6 +53,9 @@
 }
 
 .activities__right {
+	@media (max-width: 992px) {
+		margin-top: 20px;
+	}
 	@media (max-width: 576px) {
 		display: none;
 	}
