--- a/src/scss/blocks/_results.scss
+++ b/src/scss/blocks/_results.scss
@@ -14,11 +14,20 @@
     padding-bottom: 60px;
   }
 }
-.result__wrapper {
+.results__wrapper {
   padding: 30px 0;
   background-color: #f2f2f2;
   position: relative;
   z-index: 1;
+  .container {
+    padding: 0 60px;
+  }
+  .slick-dotted.slick-slider {
+    margin-bottom: 0;
+  }
+  @media (max-width: 576px) {
+    padding: 15px 0;
+  }
 }
 
 .results__circle {
