--- a/src/scss/blocks/_slick.scss
+++ b/src/scss/blocks/_slick.scss
@@ -1,7 +1,7 @@
 .slick-slider-1 {
     .slick-list {
         overflow: visible;
-        padding: 0 300px;
+        padding: 20px 300px;
         @media (max-width: 1100px) {
             overflow: hidden;
             padding: 0;
@@ -20,8 +20,9 @@
     }
 }
 
-.slick-slider-1,
+.results__buttons,
 .slick-slider-2,
+.slick-slider-5,
 .slick-slider-4 {
     .slick-prev,
     .slick-next {
@@ -58,6 +59,15 @@
             top: 0;
             right: 0;
         }
+    }
+}
+
+.results__buttons {
+    .slick-prev {
+        left: 15px;
+    }
+    .slick-next {
+        right: 15px;
     }
 }
 
