--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ block content
 					li
 						a(href="#anchor1").anchor-link Главная
 					li
-						a(href="#anchor2") Направления
+						a(href="#anchor2") Услуги
 					li
 						a(href="#anchor3") Результаты
 					li
@@ -40,7 +40,7 @@ block content
 						li Более 500 операций в год
 						li Более 1500 консультаций и УЗИ сосудов в год
 						li Современные методы лечения варикозной болезни
-						li Веду прием по адресу Проспект победы 50 клиника мир здоровья
+						li Веду прием по адресу: Проспект победы, 50, клиника "Мир" здоровья
 						.name__btns
 							a(href="tel:8247835") Позвонить
 							a(href="mailto:asdad@asdasd.com") Написать
@@ -68,16 +68,6 @@ block content
 								span.direction__title Консультация
 							.direction__bottom.panel
 								p Главный герой — 27-летний Илья Горюнов, семь лет отсидевший в тюрьме по ложному обвинению в распространении наркотиков. Когда Илья выходит на свободу, он понимает, что прежняя жизнь, по которой он тосковал, разрушена, и вернуться к ней он больше не сможет. 
-						li.direction__item
-							.direction__top.accordion
-								.direction__picture
-									.direction__circle-pic
-									<svg width="80" height="80" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-										<path d="M405.537,203.085C405.507,203.047 405.474,203.009 405.444,202.972L361.549,141.769L361.549,116.471L379.012,116.471C383.478,116.471 387.096,112.853 387.096,108.387L387.096,8.084C387.096,3.618 383.478,0 379.012,0L132.99,0C128.524,0 124.906,3.619 124.906,8.084L124.906,108.386C124.906,112.852 128.524,116.47 132.99,116.47L150.455,116.47L150.455,141.768L106.515,203.031C101.283,208.732 98.41,216.089 98.41,223.827L98.41,481.205C98.41,498.185 112.223,511.998 129.203,511.998L382.797,511.998C399.777,511.998 413.59,498.185 413.59,481.205L413.59,401.043L413.59,251.688L413.59,223.827C413.591,216.116 410.737,208.781 405.537,203.085ZM337.893,16.168L370.928,16.168L370.928,100.302L353.465,100.302L337.893,100.302L337.893,16.168ZM345.381,116.471L345.381,136.285L166.623,136.285L166.623,116.471L345.381,116.471ZM288.688,16.168L321.723,16.168L321.723,100.302L288.688,100.302L288.688,16.168ZM239.484,16.168L272.519,16.168L272.519,100.302L239.484,100.302L239.484,16.168ZM190.277,16.168L223.314,16.168L223.314,100.302L190.277,100.302L190.277,16.168ZM141.074,100.302L141.074,16.168L174.109,16.168L174.109,100.302L158.539,100.302L141.074,100.302ZM397.423,392.961L189.541,392.961C185.075,392.961 181.457,396.58 181.457,401.045C181.457,405.51 185.075,409.129 189.541,409.129L397.423,409.129L397.423,481.207C397.423,489.271 390.862,495.832 382.798,495.832L129.204,495.832C121.139,495.832 114.579,489.271 114.579,481.207L114.579,409.129L161.514,409.129C165.98,409.129 169.598,405.51 169.598,401.045C169.598,396.58 165.98,392.961 161.514,392.961L114.579,392.961L114.579,259.773L397.423,259.773L397.423,392.961ZM397.423,243.604L114.579,243.604L114.579,223.827C114.579,220.047 116.031,216.453 118.667,213.709C119.041,213.32 119.369,212.901 119.652,212.458L162.689,152.454L349.314,152.454L392.345,212.452C392.628,212.896 392.958,213.319 393.333,213.708C395.97,216.456 397.423,220.049 397.423,223.829L397.423,243.604Z" style="fill-rule:nonzero;"/>
-									</svg>
-								span.direction__title Медикаментозная <br> терапия
-							.direction__bottom.panel
-								p Главный герой — 27-летний Илья Горюнов, семь лет отсидевший в тюрьме по ложному обвинению в распространении наркотиков. Когда Илья выходит на свободу, он понимает, что прежняя жизнь, по которой он тосковал, разрушена, и вернуться к ней он больше не сможет. 
 					ul.direction__right-list
 						li.direction__item
 							.direction__top.accordion
@@ -86,7 +76,7 @@ block content
 									<svg width="80" height="80" viewBox="0 0 513 513" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
 										<path d="M497.036,459.676L129.738,459.676C128.81,459.676 127.923,459.845 127.096,460.14L203.675,383.561L203.737,383.623C205.214,385.1 207.216,385.929 209.305,385.929C211.393,385.929 213.395,385.1 214.873,383.623L272.415,326.08C273.711,326.919 275.199,327.342 276.687,327.342C278.701,327.342 280.717,326.574 282.255,325.036L499.865,107.426C516.049,91.241 516.049,64.905 499.865,48.72C483.678,32.535 457.344,32.532 441.158,48.72L416.576,73.301C413.501,76.376 413.501,81.36 416.576,84.434C419.651,87.508 424.635,87.51 427.71,84.434L452.292,59.853C462.337,49.807 478.683,49.806 488.729,59.853C498.775,69.899 498.775,86.246 488.729,96.292L276.685,308.334L240.248,271.895L409.6,102.542C412.675,99.467 412.675,94.482 409.6,91.409C406.523,88.333 401.539,88.335 398.466,91.409L223.546,266.329C220.873,269.002 220.527,273.117 222.502,276.168L164.959,333.711C163.483,335.187 162.654,337.19 162.654,339.278C162.654,341.366 163.483,343.369 164.959,344.845L165.021,344.907L111.267,398.661C109.791,400.137 108.962,402.14 108.962,404.228L108.962,459.267C108.962,460.197 109.143,461.092 109.448,461.935C108.028,460.539 106.082,459.676 103.932,459.676L7.873,459.676C3.524,459.676 0,463.201 0,467.549C0,471.897 3.524,475.422 7.873,475.422L103.932,475.422C108.281,475.422 111.805,471.897 111.805,467.549C111.805,466.603 111.63,465.701 111.324,464.862C112.033,465.561 112.866,466.145 113.822,466.54C114.796,466.943 115.819,467.139 116.833,467.139C118.852,467.139 120.833,466.359 122.333,464.896C122.036,465.726 121.865,466.616 121.865,467.549C121.865,471.897 125.39,475.422 129.738,475.422L497.037,475.422C501.386,475.422 504.91,471.897 504.91,467.549C504.909,463.2 501.385,459.676 497.036,459.676ZM236.986,290.903L261.153,315.07L236.986,339.238L236.986,290.903ZM210.13,310.807L221.24,299.697L221.24,354.984L210.13,366.095L210.13,310.807ZM194.385,326.552L194.385,352.001L181.722,339.339L181.659,339.276L194.385,326.552ZM124.707,407.488L176.155,356.04L192.541,372.426L124.707,440.26L124.707,407.488Z" style="fill-rule:nonzero;"/>
 									</svg>
-								span.direction__title Консультация
+								span.direction__title Диагностика
 							.direction__bottom.panel
 								p Главный герой — 27-летний Илья Горюнов, семь лет отсидевший в тюрьме по ложному обвинению в распространении наркотиков. Когда Илья выходит на свободу, он понимает, что прежняя жизнь, по которой он тосковал, разрушена, и вернуться к ней он больше не сможет. 
 						li.direction__item
@@ -101,7 +91,7 @@ block content
 											<path d="M293.805,393.382L293.805,340.272L346.915,340.272C351.058,340.272 354.415,336.914 354.415,332.772L354.415,272.162C354.415,268.02 351.058,264.662 346.915,264.662L293.805,264.662L293.805,211.552C293.805,207.41 290.448,204.052 286.305,204.052L225.696,204.052C221.553,204.052 218.196,207.41 218.196,211.552L218.196,264.662L165.086,264.662C160.943,264.662 157.586,268.02 157.586,272.162L157.586,332.772C157.586,336.914 160.943,340.272 165.086,340.272L218.196,340.272L218.196,393.382C218.196,397.524 221.553,400.882 225.696,400.882L286.305,400.882C290.447,400.882 293.805,397.524 293.805,393.382ZM278.805,332.772L278.805,385.882L233.196,385.882L233.196,332.772C233.196,328.63 229.839,325.272 225.696,325.272L172.586,325.272L172.586,279.662L225.696,279.662C229.839,279.662 233.196,276.304 233.196,272.162L233.196,219.052L278.805,219.052L278.805,272.162C278.805,276.304 282.162,279.662 286.305,279.662L339.415,279.662L339.415,325.272L286.305,325.272C282.162,325.272 278.805,328.63 278.805,332.772Z" style="fill-rule:nonzero;"/>
 										</g>
 									</svg>
-								span.direction__title Медикаментозная <br> терапия
+								span.direction__title Лечение
 							.direction__bottom.panel
 								p Главный герой — 27-летний Илья Горюнов, семь лет отсидевший в тюрьме по ложному обвинению в распространении наркотиков. Когда Илья выходит на свободу, он понимает, что прежняя жизнь, по которой он тосковал, разрушена, и вернуться к ней он больше не сможет. 
 		
@@ -159,21 +149,6 @@ block content
 							p.ta Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque aliquid tenetur incidunt delectus dignissimos aspernatur doloribus, perspiciatis distinctio consequuntur voluptate consequatur voluptatibus nisi amet deserunt veritatis ducimus dolores, fugiat laborum consectetur. Consequuntur, impedit tempore nulla iure provident recusandae. Neque iusto rem fugit distinctio voluptatibus alias similique aut consectetur, harum inventore.
 							a.read-next показать полностью
 
-		section.member
-			.container
-				h2.main-title Являюсь членом ассоциаций
-				h3.subtitle Являюсь членом ассоциаций
-				.member__wrapper
-					ul.member__list.slick-slider-5
-						.item
-							img(src="../images/brend1.svg", alt="" width="162" height="112")
-						.item
-							img(src="../images/brend2.png", alt="" width="75" height="111")
-						.item
-							img(src="../images/brend3.jpg", alt="" width="229" height="113")
-						.item
-							img(src="../images/brend4.png", alt="" width="110" height="110")
-
 		section.certificats
 			.container
 				h2.main-title.main-title--center Сертификаты
@@ -223,8 +198,8 @@ block content
 			.container
 				//- .activities__circle
 				//- 	span.circle-1
-				h2.main-title.main-title--center Виды деятельности
-				h3.subtitle.subtitle--center Виды деятельности
+				h2.main-title.main-title--center Направления деятельности
+				h3.subtitle.subtitle--center Направления деятельности
 				.activities__wrapper.slick-slider-3
 					.item
 						.activities__left
