--- a/src/index.pug
+++ b/src/index.pug
@@ -40,10 +40,10 @@ block content
 						li Более 500 операций в год
 						li Более 1500 консультаций и УЗИ сосудов в год
 						li Современные методы лечения варикозной болезни
-						li Веду прием по адресу: Проспект победы, 50, клиника "Мир" здоровья
+						li Веду прием по адресу: Проспект победы, 50, клиника «Мир здоровья»
 						.name__btns
 							a(href="tel:8247835") Позвонить
-							a(href="mailto:asdad@asdasd.com") Написать
+							a#write-to-me Написать
 					.name__photo
 						.name__photo-pic
 
@@ -68,7 +68,6 @@ block content
 								span.direction__title Консультация
 							.direction__bottom.panel
 								p Главный герой — 27-летний Илья Горюнов, семь лет отсидевший в тюрьме по ложному обвинению в распространении наркотиков. Когда Илья выходит на свободу, он понимает, что прежняя жизнь, по которой он тосковал, разрушена, и вернуться к ней он больше не сможет. 
-					ul.direction__right-list
 						li.direction__item
 							.direction__top.accordion
 								.direction__picture
@@ -78,7 +77,8 @@ block content
 									</svg>
 								span.direction__title Диагностика
 							.direction__bottom.panel
-								p Главный герой — 27-летний Илья Горюнов, семь лет отсидевший в тюрьме по ложному обвинению в распространении наркотиков. Когда Илья выходит на свободу, он понимает, что прежняя жизнь, по которой он тосковал, разрушена, и вернуться к ней он больше не сможет. 
+								p Главный герой — 27-летний Илья Горюнов, семь лет отсидевший в тюрьме по ложному обвинению в распространении наркотиков. Когда Илья выходит на свободу, он понимает, что прежняя жизнь, по которой он тосковал, разрушена, и вернуться к ней он больше не сможет. 					
+					ul.direction__right-list
 						li.direction__item
 							.direction__top.accordion
 								.direction__picture
@@ -138,16 +138,59 @@ block content
 					.about-me__right
 						h2.main-title Обо мне
 						h3.subtitle Обо мне
-						p.about-me__name Синицым Александр Александрович
+						p.about-me__name Синицин Александр Александрович
 						p.about-me__description врач флеболог, сосудистый хирург, врач УЗИ
 						.about-me__experience
 							p стаж работы - 
-								span 16 лет
+								span 
+									b 16 лет
 							p квалификация - 
-								span высшая категория
-						.block(style="height:100%")
-							p.ta Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque aliquid tenetur incidunt delectus dignissimos aspernatur doloribus, perspiciatis distinctio consequuntur voluptate consequatur voluptatibus nisi amet deserunt veritatis ducimus dolores, fugiat laborum consectetur. Consequuntur, impedit tempore nulla iure provident recusandae. Neque iusto rem fugit distinctio voluptatibus alias similique aut consectetur, harum inventore.
-							a.read-next показать полностью
+								span 
+									b высшая категория
+								.block(hidden)
+									p За 16 лет работы во флебологии я прошел долгий путь практических изысканий, убирая неэффективные методы и внедряя в свою практику только те, которые имеют неоспоримый эффект, надежность, минимальную травматичность и высокую эстетичность. И хотя я позиционирую себя как флеболог, мой уровень знаний в области медицины не ограничивается одной флебологией. Я являюсь специалистом, который проводит диагностику и операции на периферических сосудах, коронарных артериях, артериях головного мозга. Это позволяет мне более широко смотреть на проблемы, с которыми обращаются ко мне пациенты.
+									p Для себя я выделил приоритетные направления, в которых достиг особого уровня мастерства. Во-первых, это лечение варикозной болезни. Я активно использую эндовенозную лазерную облитерацию (ЭВЛО). Провожу эту процедуру амбулаторно у пациентов с любой стадией варикозной болезни, а также при рецидивах после классической флебэктомии. Во-вторых, это эстетическая флебология – лечение ретикулярных вен и телеангиэктазий (сосудистых звездочек). Активно использую минифлебэктомию, все виды склеротерапии. В-третьих, занимаюсь лечением лимфатических и венозных отеков. Единственный специалист в области, который прошел обучение по бандажированию и мануальному лимфодренажу при лимфедеме в 2019г. В-четвертых, являясь специалистом ультразвуковой диагностики, я лично провожу УЗИ сосудов своим пациентам. Это самый правильный подход во флебологии, когда специалист проводит и диагностику, и лечение. При таком подходе улучшаются результаты и качество лечения.
+									p Постоянно занимаюсь самосовершенствованием, участвую в российских и зарубежных конференциях, мастер классах, образовательных школах, тренингах по флебологии. Участвую в научных исследованиях в сфере флебологии.
+									p Большую роль в процессе становления меня как профессионала сыграла Курская областная клиническая больница. С 2012 года свою деятельность я осуществляю в клинике «Мир Здоровья», где созданы оптимальные условия для лечения патологии венозной и лимфатической систем.
+									p
+										b Перечень мептодик, которыми я владею
+										ul.about-me__list
+											li эндовенозная лазерная облитерация (ЭВЛО/ЭВЛА/ЭВЛК);
+											li минифлебэктомия по немецкой технологии Варади;
+											li склеротерапия (микросклеротерапия, пенная склеротерапия (Foam-Form), Film – склеротерапия, ЭХО-склеротерапия);
+											li бандажирование, мануальный лимфодренаж (лечение лимфедемы, отеков при хронической лимфовенозной недостаточности);
+											li подбор компрессионного трикотажа;
+											li подбор раневых повязок/покрытий;
+											li местное лечение венозных трофических язв;
+											li ультразвуковое ангиосканирование вен нижних конечностей;
+											li ультразвуковое ангиосканирование вен верхних конечностей;
+											li ультразвуковое ангиосканирование артерий нижних конечностей;
+											li ультразвуковое ангиосканирование артерий верхних конечностей, шеи.
+										b Консультация и лечение по вопросам заболеваний сосудов
+										ul
+											li Варикозная болезнь нижних конечностей
+											li Ретикулярный варикоз
+											li Телеангиэктазии (сосудистые звездочки)
+											li Лимфедема
+											li Тромбофлебит поверхностных вен
+											li Тромбоз глубоких вен
+											li Посттромботическая болезнь нижних конечностей
+											li Венозные трофические язвы
+										b Действующие сертификаты
+										ul
+											li Сердечно-сосудистая хирургия
+											li Хирургия
+											li Ультразвуковая диагностика
+											li Рентгенэндоваскулярные диагностика и лечение
+										b Членство в обществах
+										ul
+											li Член «Ассоциации флебологов» (АФР)
+											li Член «Российского общества ангиологов и сосудистых хирургов» (РОАиСХ)
+											li Член «Национальной коллегии флебологов» (НКФ)
+											li Член «Российского научного общество интервенционных кардиоангиологов» (РНОИК)
+								
+								
+								a.show-text показать полностью
 
 		section.certificats
 			.container
@@ -204,37 +247,33 @@ block content
 					.item
 						.activities__left
 							p.activities__title Эндовенозная лазерная облитерация (ЭВЛО)
-							.block(style="height:100%")
-								.ta
-									p Эндовенозная лазерная облитерация (ЭВЛО) – на сегоднящний день является "золотым"стандартом в лечении варикозной болезни. Суть метода заключается в термическом воздействии лазерным световодом на вену изнутри, что приводит к повреждению венозной стенки. Поврежденная таким образом вена со временем полностью исчезает. При этом воздействие приходится только на стенку вену без повреждения окружающих тканей, что делает метод наименее травматичным и, как следствие, хорошо переносимым пациентами. Восстановительный период после такого вмешательства короткий, пациентам разрешается выходить на работу на следующий день после операции. При проведении ЭВЛО не требуется выполнять разрезов кожи, все манипуляции делаются через проколы, под местной анестезией.Таким образом значительно снижается  уровень болевых ощущений, и повышается косметичность процедуры. Пациенты не ограничены в своей повседневной жизни, могут гулять, посещать любые заведения, заниматься домашними делами. Сама процедура занимает в среднем 15-30 минут в зависимости от анатомических особенностей строения вены. ЭВЛО часто комбинируют со склеротерарией и минифлебэктомией.
-								a.read-next показать полностью
+								p Эндовенозная лазерная облитерация (ЭВЛО) – на сегоднящний день является "золотым"стандартом в лечении варикозной болезни. 
+								block(hidden) Суть метода заключается в термическом воздействии лазерным световодом на вену изнутри, что приводит к повреждению венозной стенки. Поврежденная таким образом вена со временем полностью исчезает. При этом воздействие приходится только на стенку вену без повреждения окружающих тканей, что делает метод наименее травматичным и, как следствие, хорошо переносимым пациентами. Восстановительный период после такого вмешательства короткий, пациентам разрешается выходить на работу на следующий день после операции. При проведении ЭВЛО не требуется выполнять разрезов кожи, все манипуляции делаются через проколы, под местной анестезией.Таким образом значительно снижается  уровень болевых ощущений, и повышается косметичность процедуры. Пациенты не ограничены в своей повседневной жизни, могут гулять, посещать любые заведения, заниматься домашними делами. Сама процедура занимает в среднем 15-30 минут в зависимости от анатомических особенностей строения вены. ЭВЛО часто комбинируют со склеротерарией и минифлебэктомией.
+								a.show-text показать полностью
 						.activities__right
 							img(src="../images/activities.png" alt="")
 					.item
 						.activities__left
 							p.activities__title Склеротерапия
-							.block(style="height:100%")
-								.ta
-									p Склеротерапия – широко распространенный метод лечения хронических заболеваний вен. С помощью склеротерапии можно устранить как крупные варикозные вены, которые представляют собой проблему для здоровья, так и мелкие сосудистые звездочки, то есть эстетический дефект. Склеротерапия – это химический метод лечения, основной целью которого является химическое разрушение внутренних слоев стенки вены, что приводит к прекращению кровотока в ней и ее исчезновению в течение некоторого времени (от 2 недель, если это мелкие сосудистые звездочки, до полугода, если крупные подкожные вены). В качестве склерозанта (вещества, которое разрушает вену) в нашей стране используются препараты: натрия тетрадецилсульфат (фибро-вейн) и полидоканол (этоксисклерол). Эти препараты можно вводить в вену в жидкой форме или в виде пены. Склеротерапия имеет ряд преимуществ перед другими методами: малоболезненный, не требующий анестезии метод, выполняется амбулаторно и не ограничивает работоспособность пациента. Метод имеет хороший косметический результат. Однако этот результат можно увидеть не сразу, требуется определенное терпение и пациента, и флеболога в его достижении, в некоторых случая возникает необходимость повторного введения склерозанта. Кроме того, нередко на месте обработанной вены или сосудистой звездочки возникает гиперпигментация (потемнение участка кожи). Это реакция кожи на процессы происходящие в стенке вены после введения препарата или на наличие оставшихся разрушенных клеток крови в вене. Гиперпигментация – явление временное. Чаще всего, в течение нескольких недель или месяцев она исчезает, но бывают случаи стойкой гиперпигментации, которая сохраняется в течение нескольких лет. Это зависит от типа кожи пациента. Другой неприятный момент, который может возникнуть после склеротерапии, это вторичные телеангиэктазии – мельчайшие сосуды, которые либо исчезают сами через некоторое время, либо требуют повторного проведения склеротерапии. Частота побочных реакций и окончательный результат, зависят и от опыта специалиста.
-								a.read-next показать полностью
+								p Склеротерапия – широко распространенный метод лечения хронических заболеваний вен. 
+								block(hidden) С помощью склеротерапии можно устранить как крупные варикозные вены, которые представляют собой проблему для здоровья, так и мелкие сосудистые звездочки, то есть эстетический дефект. Склеротерапия – это химический метод лечения, основной целью которого является химическое разрушение внутренних слоев стенки вены, что приводит к прекращению кровотока в ней и ее исчезновению в течение некоторого времени (от 2 недель, если это мелкие сосудистые звездочки, до полугода, если крупные подкожные вены). В качестве склерозанта (вещества, которое разрушает вену) в нашей стране используются препараты: натрия тетрадецилсульфат (фибро-вейн) и полидоканол (этоксисклерол). Эти препараты можно вводить в вену в жидкой форме или в виде пены. Склеротерапия имеет ряд преимуществ перед другими методами: малоболезненный, не требующий анестезии метод, выполняется амбулаторно и не ограничивает работоспособность пациента. Метод имеет хороший косметический результат. Однако этот результат можно увидеть не сразу, требуется определенное терпение и пациента, и флеболога в его достижении, в некоторых случая возникает необходимость повторного введения склерозанта. Кроме того, нередко на месте обработанной вены или сосудистой звездочки возникает гиперпигментация (потемнение участка кожи). Это реакция кожи на процессы происходящие в стенке вены после введения препарата или на наличие оставшихся разрушенных клеток крови в вене. Гиперпигментация – явление временное. Чаще всего, в течение нескольких недель или месяцев она исчезает, но бывают случаи стойкой гиперпигментации, которая сохраняется в течение нескольких лет. Это зависит от типа кожи пациента. Другой неприятный момент, который может возникнуть после склеротерапии, это вторичные телеангиэктазии – мельчайшие сосуды, которые либо исчезают сами через некоторое время, либо требуют повторного проведения склеротерапии. Частота побочных реакций и окончательный результат, зависят и от опыта специалиста.
+								a.show-text показать полностью
 						.activities__right
 							img(src="../images/activities.png" alt="")
 					.item
 						.activities__left
 							p.activities__title Минифлебэктомия
-							.block(style="height:100%")
-								.ta
-									p Минифлебэктомия – это малотравматичное вмешательство, то есть устранение варикозно измененных вен через проколы. Любая вена, и крупная, и мелкая, несмотря на внушающий размер в положении человека стоя, спадается лежа и становится легко извлекаемой через проколы в 1-3 мм. Эти проколы настолько малы, что быстро заживают, обесцвечиваются и становятся совершенно незаметными на коже, никаких следов операции и варикозных вен не остается. За счет малой травматичности достигается короткий период реабилитации после операции. В большинстве случаев пациенты активны и трудоспособны. После вмешательства, как правило 2 недели, рекомендуется ношение компрессионного белья. Проведение минифлебэктомии требует обезболивания. Чаще всего достаточно местной анестезии. Для анестезии используются те же препараты, что и в стоматологической практике: либо лидокаин, либо артикаин, в редких случаях ропивакин. Осложнения и побочные реакции минифлебэктомии встречаются редко. Синяки и болезненные ощущения чаще всего не требуют приема анальгетиков и уходят в течение 1-3 недель. Может возникнуть легкая гиперпигментация, но она не бросается в глаза и быстро исчезает. Вторичные телеангиэктазии (сосудистые звездочки) – явление редкое и в большинстве случаев самостоятельно проходящее, хотя иногда возникает необходимость коррекции сосудистых звездочек с помощью склеротерапии после минифлебэктомии.  Осложнения в виде тромбоза глубоких вен, тромбофлебита поверхностных вен, тромбоэмболии легочной артерии и пр. возникают крайне редко.
-								a.read-next показать полностью
+								p Минифлебэктомия – это малотравматичное вмешательство, то есть устранение варикозно измененных вен через проколы. 
+								block(hidden) Любая вена, и крупная, и мелкая, несмотря на внушающий размер в положении человека стоя, спадается лежа и становится легко извлекаемой через проколы в 1-3 мм. Эти проколы настолько малы, что быстро заживают, обесцвечиваются и становятся совершенно незаметными на коже, никаких следов операции и варикозных вен не остается. За счет малой травматичности достигается короткий период реабилитации после операции. В большинстве случаев пациенты активны и трудоспособны. После вмешательства, как правило 2 недели, рекомендуется ношение компрессионного белья. Проведение минифлебэктомии требует обезболивания. Чаще всего достаточно местной анестезии. Для анестезии используются те же препараты, что и в стоматологической практике: либо лидокаин, либо артикаин, в редких случаях ропивакин. Осложнения и побочные реакции минифлебэктомии встречаются редко. Синяки и болезненные ощущения чаще всего не требуют приема анальгетиков и уходят в течение 1-3 недель. Может возникнуть легкая гиперпигментация, но она не бросается в глаза и быстро исчезает. Вторичные телеангиэктазии (сосудистые звездочки) – явление редкое и в большинстве случаев самостоятельно проходящее, хотя иногда возникает необходимость коррекции сосудистых звездочек с помощью склеротерапии после минифлебэктомии.  Осложнения в виде тромбоза глубоких вен, тромбофлебита поверхностных вен, тромбоэмболии легочной артерии и пр. возникают крайне редко.
+								a.show-text показать полностью
 						.activities__right
 							img(src="../images/activities.png" alt="")
 					.item
 						.activities__left
 							p.activities__title Ультразвуковое ангиосканирование
-							.block(style="height:100%")
-								.ta
-									p Ультразвуковое ангиосканирование - ультразвуковое исследование сосудов. В руках флеболога ультразвуковой датчик - это то же самое, что и фоноэндоскоп в руках терапевта. Флеболог и УЗИ – две взаимодополняющие части. С помощью ультразвука флеболог не просто видит анатомию сосудов, их диаметр, наличие или отсутствие тромботических масс в просвете вены, флеболог, проводя исследование, одновременно отвечает себе на поставленные им же вопросы перед исследованием, и возникающие во время исследования. УЗИ помогает доктору нарисовать в своей голове полную картину болезни, понять, как ее устранить, спланировать операцию, если она требуется, спрогнозировать результат. Кроме того, большинство вмешательств на венозной системе (например, ЭВЛО, РЧО, Венасил,  Флебогриф, склеротерапия) возможно только под ультразвуковой  навигацией.
-								a.read-next показать полностью
+								p Ультразвуковое ангиосканирование - ультразвуковое исследование сосудов. 
+								block(hidden) В руках флеболога ультразвуковой датчик - это то же самое, что и фоноэндоскоп в руках терапевта. Флеболог и УЗИ – две взаимодополняющие части. С помощью ультразвука флеболог не просто видит анатомию сосудов, их диаметр, наличие или отсутствие тромботических масс в просвете вены, флеболог, проводя исследование, одновременно отвечает себе на поставленные им же вопросы перед исследованием, и возникающие во время исследования. УЗИ помогает доктору нарисовать в своей голове полную картину болезни, понять, как ее устранить, спланировать операцию, если она требуется, спрогнозировать результат. Кроме того, большинство вмешательств на венозной системе (например, ЭВЛО, РЧО, Венасил,  Флебогриф, склеротерапия) возможно только под ультразвуковой  навигацией.
+								a.show-text показать полностью
 						.activities__right
 							img(src="../images/activities.png" alt="")
 
@@ -284,4 +323,15 @@ block content
 				div.close
 					span
 					span
-
+	.popup
+		p Вы можете связаться со мной любым <br> удобным для вас способом:
+		ul.main-footer__social
+			li
+				a(href="#")
+					img(src="../images/fb.svg" alt="")
+			li
+				a(href="#")
+					img(src="../images/vk.svg" alt="")
+			li
+				a(href="#")
+					img(src="../images/inst.svg" alt="")
