--- a/src/scss/blocks/_acc.scss
+++ b/src/scss/blocks/_acc.scss
@@ -11,3 +11,15 @@
         transition: max-height 0.2s ease-out;
     }
 }
+
+// .accordion__about {
+//     cursor: pointer;
+//     outline: none;
+//     transition: 0.4s;
+// }
+
+// .panel__about {
+//     max-height: 0;
+//     overflow: hidden;
+//     transition: max-height 0.2s ease-out;
+// }
