--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,3 +25,5 @@
 @import "blocks/mobile-menu";
 @import "blocks/certificats";
 @import "blocks/certificats-slider";
+@import "blocks/popup";
+@import "blocks/overlay";
