--- a/src/scss/_vendor.scss
+++ b/src/scss/_vendor.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/normalize.css/normalize";
 @import "../../node_modules/slick-carousel/slick/slick.scss";
 @import "../../node_modules/slick-carousel/slick/slick-theme.scss";
-@import "../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.css";
+// @import "../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.css";
+@import "../../node_modules/fancybox/dist/scss/jquery.fancybox.scss";
