--- a/src/scss/blocks/_about-me.scss
+++ b/src/scss/blocks/_about-me.scss
@@ -22,9 +22,8 @@
 }
 
 .about-me__left {
-	flex: 1 0 485px;
-	margin-right: 60px;
-	margin-top: 60px;
+	// flex: 1 0 485px;
+	margin-right: 65px;
 	@media (max-width: 992px) {
 		margin-right: 0;
 		flex: auto;
@@ -53,6 +52,34 @@
 
 .about-me__experience {
 	margin-bottom: 20px;
+	p {
+		margin-bottom: 10px;
+	}
+	ul {
+		margin-bottom: 20px;
+		margin-top: 20px;
+		li {
+			padding-left: 20px;
+		}
+	}
+	.about-me__list {
+		li {
+			padding-left: 20px;
+			position: relative;
+			&::before {
+				content: "";
+				display: block;
+				position: absolute;
+				left: 0;
+				top: 50%;
+				margin-top: -4px;
+				width: 8px;
+				height: 8px;
+				background-color: $color-dark-blue;
+				border-radius: 50%;
+			}
+		}
+	}
 }
 
 .about-me__picture {
