--- a/src/scss/blocks/_results.scss
+++ b/src/scss/blocks/_results.scss
@@ -8,7 +8,7 @@
     }
   }
   @media (max-width: 992px) {
-    padding-bottom: 0;
+    padding-bottom: 60px;
   }
   @media (max-width: 576px) {
     padding-bottom: 60px;
@@ -21,6 +21,9 @@
   z-index: 1;
   .container {
     padding: 0 60px;
+    @media (max-width: 576px) {
+      padding: 0 15px;
+    }
   }
   .slick-dotted.slick-slider {
     margin-bottom: 0;
