меняет местами иконки в секции услуг

--- a/src/scss/blocks/_result-slider.scss
+++ b/src/scss/blocks/_result-slider.scss
@@ -1,5 +1,6 @@
 .result-slider {
   padding: 0 60px;
+  padding-bottom: 20px;
   overflow: hidden;
   .item {
     position: relative;
@@ -15,5 +16,4 @@
     padding: 30px 10px;
     padding-top: 0;
   }
-
 }
