--- a/src/scss/blocks/_slick.scss
+++ b/src/scss/blocks/_slick.scss
@@ -16,7 +16,7 @@
     .slick-dots {
         margin-left: -60px;
         @media (max-width: 576px) {
-            margin-left: 0;
+            margin-left: -15px;
         }
     }
     .slick-slide {
