--- a/src/scss/blocks/_name.scss
+++ b/src/scss/blocks/_name.scss
@@ -142,6 +142,7 @@
 		background-color: $color-light-blue;
 		border-radius: 10px;
 		color: white;
+		cursor: pointer;
 
 		&:first-child {
 			margin-right: 20px;
