--- a/src/scss/blocks/_overlay.scss
+++ b/src/scss/blocks/_overlay.scss
@@ -1,11 +1,18 @@
-.overlay {
-    transition: ease 1s;
-    background-color: rgba(24, 91, 131, 0.2);
-    transition: ease 1s;
-    z-index: 999999;
+#overlay {
+    transition: 0.3s;
     position: fixed;
-    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
     top: 0;
+    left: 0;
     right: 0;
     bottom: 0;
+    background-color: rgba(24, 91, 131, 0.5);
+    z-index: 100;
+
+    &.active {
+        display: block;
+    }
+
 }
