--- a/src/scss/blocks/_popup.scss
+++ b/src/scss/blocks/_popup.scss
@@ -1,19 +1,17 @@
-.popup {
-    display: none;
-    &.active {
-        display: block;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        margin-top: -74px;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        z-index: 1111111;
-        padding: 20px;
-        font-size: 20px;
-        font-weight: 600;
-        .main-footer__social {
-            padding-top: 20px;
-        }
+#popup {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    .main-footer__social {
+        padding-top: 20px;
+    }
+    @media (max-width: 576px) {
+        width: 90%;
     }
 }
